# querymate

./: .gitignore  .trufflehog-exclude  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml  security.yml
docs/: Makefile  api.rst  conf.py  datetime_filtering.md  defaults.rst  filter_operations.md  index.rst  predicates.rst  quickstart.rst
docs/source/: conf.py  contributing.rst  index.rst  installation.rst  quickstart.rst
docs/source/api/: index.rst  querymate.rst
docs/source/examples/: index.rst
docs/source/usage/: configuration.rst  field_selection.rst  filtering.rst  grouping.rst  index.rst  pagination.rst  predicates.rst  relationships.rst  serialization.rst  sorting.rst
examples/: async_example.py  basic.py
querymate/: __init__.py  types.py
querymate/core/: __init__.py  config.py  filter.py  grouping.py  predicate.py  query_builder.py  querymate.py
scripts/: update_changelog.py  update_version.py
tests/: __init__.py  conftest.py  models.py  test_filter.py  test_grouping.py  test_predicate.py  test_query_builder.py  test_querymate.py
